[workspace]
members = [
  "scripts",
  "interchain-tests",
  "framework-clone-testing",
  "modules-clone-testing",
]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

[workspace.package]
version = "0.23.0"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Riada <riada@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://docs.abstract.money/"
repository = "https://github.com/AbstractSDK/abstract"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]

[workspace.dependencies]
cosmwasm-std = { version = "2.0" }
cosmwasm-schema = { version = "2.0" }
cw-controllers = { version = "2.0" }
cw-utils = { version = "2.0" }
cw-storage-plus = "2.0.0"
cw2 = { version = "2.0.0" }
cw20 = { version = "2.0.0" }
cw20-base = { version = "2.0.0", features = ["library"] }

cw-asset = { version = "4.0" }
cw-ownable = { version = "2.0" }
cw-address-like = { version = "2.0" }

schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
protobuf = { version = "2", features = ["with-bytes"] }

clap = { version = "4.0.32", features = ["derive"] }
semver = "1.0"
tokio = { version = "1.33.0", features = ["full"] }

polytone = { package = "abstract-polytone", version = "2.0.0" }
polytone-note = { package = "abstract-polytone-note", version = "4.0.0" }
cw-orch-polytone = { package = "abstract-cw-orch-polytone", version = "5.0.0" }

cw-orch = { version = "0.25.0" }
cw-orch-interchain = { version = "0.4.0" }
cw-orch-clone-testing = { version = "0.7.0-alpha.1" }
# cw-orch-proto = { version = "0.4.0" }

# Keep these as path, creates cirular dependency otherwise
# Only need to re-publish all contracts if a re-publish of abstract-interface is required
abstract-interface = { version = "0.23.0", path = "../framework/packages/abstract-interface" }
abstract-sdk = { version = "0.23.0", path = "../framework/packages/abstract-sdk" }
abstract-std = { version = "0.23.0", path = "../framework/packages/abstract-std" }
abstract-app = { version = "0.23.0", path = "../framework/packages/abstract-app" }
abstract-adapter = { version = "0.23.0", path = "../framework/packages/abstract-adapter" }
abstract-testing = { version = "0.23.0", path = "../framework/packages/abstract-testing" }
abstract-client = { version = "0.23.0", path = "../framework/packages/abstract-client" }
# Modules
# croncat-app = { path = "../modules/contracts/apps/croncat" }
challenge-app = { path = "../modules/contracts/apps/challenge" }
# dca-app = { path = "../modules/contracts/apps/dca" }
abstract-cw-staking = { path = "../modules/contracts/adapters/cw-staking" }
abstract-dex-adapter = { path = "../modules/contracts/adapters/dex" }
abstract-money-market-adapter = { path = "../modules/contracts/adapters/money-market" }

## Testing
rstest = "0.17.0"
speculoos = "0.11.0"
anyhow = "1"

# Do not remove, none of interchain packages are deployed
[patch.crates-io]
abstract-adapter = { path = "../framework/packages/abstract-adapter" }
abstract-app = { path = "../framework/packages/abstract-app" }
abstract-interface = { path = "../framework/packages/abstract-interface" }
abstract-client = { path = "../framework/packages/abstract-client" }
abstract-sdk = { path = "../framework/packages/abstract-sdk" }
abstract-testing = { path = "../framework/packages/abstract-testing" }
abstract-std = { path = "../framework/packages/abstract-std" }
abstract-macros = { path = "../framework/packages/abstract-macros" }
abstract-adapter-utils = { path = "../framework/packages/standards/utils" }
abstract-dex-standard = { path = "../framework/packages/standards/dex" }
abstract-staking-standard = { path = "../framework/packages/standards/staking" }
abstract-money-market-standard = { path = "../framework/packages/standards/money-market" }

# TODO: remove after polytone release
cw-orch-clone-testing = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", branch = "main" }
abstract-polytone = { git = "https://github.com/AbstractSDK/polytone.git", branch = "bump/cw2" }
abstract-polytone-note = { git = "https://github.com/AbstractSDK/polytone.git", branch = "bump/cw2" }
abstract-cw-orch-polytone = { git = "https://github.com/AbstractSDK/polytone.git", branch = "bump/cw2" }
cw-plus-orch = { version = "0.25.0" }

# Backup release profile, will result in warnings during optimization
[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
