[workspace]
members = [
  "contracts/apps/*",
  "contracts/adapters/*",
  "contracts/standalones/*",
]

resolver = "2"

[workspace.package]
version = "0.23.0"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Riada <riada@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://docs.abstract.money/"
repository = "https://github.com/AbstractSDK/abstract"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]

[workspace.dependencies]


cosmwasm-std = { version = "1.5" }
cosmwasm-schema = { version = "1.2" }
cw-controllers = { version = "1.0" }
cw-utils = { version = "1.0" }
cw-storage-plus = "1.2.0"
cw2 = { version = "1.0" }
cw-plus-interface = { package = "abstract-cw-plus-interface", version = "3.0.0" }
cw20-base = { package = "abstract-cw20-base", features = [
  "library",
], version = "3.0.0" }
cw20 = { package = "abstract-cw20", version = "3.0.0" }
cw-asset = { version = "3.0" }
cw-ownable = { version = "0.5" }
cw-address-like = { version = "1.0" }

schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.50" }
protobuf = { version = "2", features = ["with-bytes"] }


chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.0.32", features = ["derive"] }
semver = "1.0"
cw-orch = { version = "0.24.0" }
cw-orch-interchain = { version = "0.3.0" }
cw-orch-osmosis-test-tube = { version = "0.2.0" }
tokio = { version = "1.4", features = ["full"] }

## crates in order of publishing ## see docs/Publishing.md

abstract-interface = { version = "0.23.0" }
abstract-adapter = { version = "0.23.0" }
abstract-app = { version = "0.23.0" }
abstract-standalone = { version = "0.23.0" }
abstract-testing = { version = "0.23.0" }
abstract-macros = { version = "0.23.0" }
abstract-client = { version = "0.23.0" }

abstract-adapter-utils = { version = "0.23.0" }
abstract-dex-standard = { version = "0.23.0" }
abstract-staking-standard = { version = "0.23.0" }
abstract-money-market-standard = { version = "0.23.0" }

# Integrations
abstract-wyndex-adapter = { path = "../integrations/wyndex-adapter", default-features = false }
abstract-osmosis-adapter = { path = "../integrations/osmosis-adapter", default-features = false }
abstract-astroport-adapter = { path = "../integrations/astroport-adapter", default-features = false }
abstract-kujira-adapter = { path = "../integrations/kujira-adapter", default-features = false }
abstract-mars-adapter = { path = "../integrations/mars-adapter", default-features = false }
abstract-astrovault-adapter = { path = "../integrations/astrovault-adapter", default-features = false }

wyndex-bundle = { path = "../integrations/bundles/wyndex" }

## Modules
croncat-app = { path = "./contracts/apps/croncat", default-features = false }
challenge-app = { path = "./contracts/apps/challenge", default-features = false }
etf-app = { path = "./contracts/apps/etf", default-features = false }
dca-app = { path = "./contracts/apps/dca", default-features = false }
abstract-cw-staking = { path = "./contracts/adapters/cw-staking", default-features = false }
abstract-dex-adapter = { path = "./contracts/adapters/dex", default-features = false }

## Testing
rstest = "0.17.0"
speculoos = "0.11.0"
anyhow = "1"

# this ensures local compatability when compiling locally
[patch.crates-io]
abstract-adapter = { path = "../framework/packages/abstract-adapter" }
abstract-app = { path = "../framework/packages/abstract-app" }
abstract-standalone = { path = "../framework/packages/abstract-standalone" }
abstract-interface = { path = "../framework/packages/abstract-interface" }
abstract-sdk = { path = "../framework/packages/abstract-sdk" }
abstract-testing = { path = "../framework/packages/abstract-testing" }
abstract-std = { path = "../framework/packages/abstract-std" }
abstract-macros = { path = "../framework/packages/abstract-macros" }
abstract-adapter-utils = { path = "../framework/packages/standards/utils" }
abstract-dex-standard = { path = "../framework/packages/standards/dex" }
abstract-money-market-standard = { path = "../framework/packages/standards/money-market" }
abstract-staking-standard = { path = "../framework/packages/standards/staking" }
abstract-client = { path = "../framework/packages/abstract-client" }

# Backup release profile, will result in warnings during optimization
[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
