[package]
name = "abstract-boot-scripts"
version = "0.1.0-alpha1"
edition = "2021"


[dependencies]
cosmwasm-std = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, default-features = false }
cw-controllers = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
boot-core = {workspace = true}
abstract-os = { workspace = true, features = ["boot"] }

abstract-boot = { workspace = true}
tokio = { version = "1.4", features = ["full"] }
log = "0.4.14"
anyhow = { workspace = true}
serde_json = "1.0.79"
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"

cosmos-sdk-proto = { version = "0.16.0", features = ["grpc-transport", "cosmwasm"] }
serde-cw-value = "0.7.0"
sha256 = "1.1.1"


