[package]
name = "abstract-token"
version = "1.0.0"
authors = ["Cyberhoward"]
edition = "2018"
description = "Expanded implementation of a CosmWasm-20 compliant token for post intialization"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-controllers = { version ="0.13" }
cw-storage-plus = "0.13"
cw2 = "0.13"
cw20 = "0.13"
cw20-base = { version = "0.13", features = ["library"] }
cosmwasm-std = { version = "1.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

abstract-os = { path = "../../packages/abstract-os"}
abstract-sdk = { version = "0.1.0", path = "../../packages/abstract-sdk" }

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "0.10.1", default-features = false }
cosmwasm-schema = { version = "1.0.0" }
