[package]
name = "abstract-cw-staking"
description = "Cw-staking is a Abstract adapter for staking tokens."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "deploy"
required-features = ["interface"]

[[example]]
name = "schema"
required-features = ["schema"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
export = []
default = []
interface = ["dep:cw-orch", "dep:abstract-interface", "export"]
juno = [
  "dep:wasmswap",
  "dep:cw20_junoswap",
  "dep:cw20-stake",
  "dep:abstract-wyndex-adapter",
  "dep:cw-controllers",
]
osmosis = ["dep:osmosis-std"]
terra = ["dep:abstract-astroport-adapter"]
all = ["juno", "terra", "interface"]
schema = ["abstract-adapter/schema"]


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true, optional = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-asset = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

abstract-sdk = { workspace = true }
abstract-core = { workspace = true }
abstract-adapter = { workspace = true }
abstract-interface = { workspace = true, optional = true }
cw-orch = { workspace = true, optional = true }

# Local
abstract-staking-adapter-traits = { workspace = true }

# Juno dexes #
cw20-stake = { git = "https://github.com/DA0-DA0/dao-contracts.git", optional = true, features = [
  "library",
], tag = "v1.0.0" }
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.1.2-beta", features = [
  "library",
], optional = true }
abstract-wyndex-adapter = { git = "https://github.com/AbstractSDK/wynddex.git", optional = true }

dao-cw-utils = { version = "0.13.4", package = "cw-utils" }

# Osmosis #
osmosis-std = { version = "0.12.0", optional = true }

# Terra #
#abstract-astroport-adapter = { git = "https://github.com/AbstractSDK/astroport-core.git", optional = true }
abstract-astroport-adapter = { path="../../../abstract-astroport-core/packages/abstract-adapter/", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { version = "1.4", features = ["full"] }
semver = { version = "1.0" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
speculoos = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
abstract-interface = { workspace = true }
clap = { workspace = true }
cw-staking = { path = ".", features = [
  "interface",
  "juno",
], package = "abstract-cw-staking" }
abstract-sdk = { workspace = true, features = ["test-utils"] }
abstract-testing = { workspace = true }
wyndex-bundle = { workspace = true }
