[package]
name = "abstract-cw-staking"
description = "Cw-staking is a Abstract adapter for staking tokens."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "deploy"
required-features = ["interface"]

[[example]]
name = "schema"
required-features = ["schema"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
export = []
default = ["export"]
interface = [
  "dep:cw-orch",
  "dep:abstract-interface",
  "export",
  "abstract-staking-adapter-traits/interface",
]
juno = ["dep:abstract-wyndex-adapter", "dep:cw-controllers"]
osmosis = ["dep:abstract-osmosis-adapter"]
terra = ["dep:abstract-astroport-adapter"]
schema = ["abstract-adapter/schema"]

[package.metadata.optimizer]
features = ["juno", "terra","osmosis"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true, optional = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-asset = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

abstract-sdk = { workspace = true }
abstract-core = { workspace = true }
abstract-adapter = { workspace = true }
abstract-interface = { workspace = true, optional = true }
cw-orch = { workspace = true, optional = true }

# Local
abstract-staking-adapter-traits = { workspace = true }

# Juno dexes #
abstract-wyndex-adapter = { git = "https://github.com/AbstractSDK/wynddex.git", optional = true }

# Osmosis #
abstract-osmosis-adapter = { git = "https://github.com/AbstractSDK/osmosis-rust.git", optional = true }

# Terra #
abstract-astroport-adapter = { git = "https://github.com/AbstractSDK/astroport-core.git", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { version = "1.4", features = ["full"] }
semver = { version = "1.0" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
speculoos = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
abstract-interface = { workspace = true }
clap = { workspace = true }
cw-staking = { path = ".", features = [
  "interface",
  "juno",
], package = "abstract-cw-staking" }
abstract-sdk = { workspace = true, features = ["test-utils"] }
abstract-testing = { workspace = true }
wyndex-bundle = { workspace = true }
