[package]
name = "abstract-cw-staking"
description = "The Cw-staking tendermint adapter is an Abstract adapter for staking tokens."
version.workspace = true
authors.workspace = true
edition.workspace = true
license = { workspace = true }
resolver = "2"
publish = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "deploy"
required-features = ["interface"]

[[example]]
name = "schema"
required-features = ["schema"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
export = []
default = ["export"]
interface = [
  "dep:cw-orch",
  "dep:abstract-interface",
  "export",
  "abstract-staking-adapter-traits/interface",
]
juno = ["abstract-wyndex-adapter/full_integration", "dep:cw-controllers"]
osmosis = ["abstract-osmosis-adapter/full_integration"]
terra = ["abstract-astroport-adapter/full_integration"]
kujira = ["dep:kujira"]
schema = ["abstract-adapter/schema"]
testing = ["abstract-wyndex-adapter/local", "abstract-astroport-adapter/local"]

[package.metadata.optimizer]
features = ["juno", "terra", "osmosis", "kujira"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true, optional = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-asset = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

abstract-sdk = { workspace = true }
abstract-core = { workspace = true }
abstract-adapter = { workspace = true }
abstract-interface = { workspace = true, optional = true }
cw-orch = { workspace = true, optional = true }

# Local
abstract-staking-adapter-traits = { workspace = true }
abstract-adapter-utils = { workspace = true }

# Juno dexes #
abstract-wyndex-adapter = { workspace = true }

# Osmosis #
abstract-osmosis-adapter = { workspace = true }

# Terra #
abstract-astroport-adapter = { workspace = true }

# Kujira #
kujira = { version = "0.8.2", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { version = "1.4", features = ["full"] }
semver = { version = "1.0" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
speculoos = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
abstract-interface = { workspace = true }
clap = { workspace = true }
cw-staking = { path = ".", features = [
  "interface",
  "juno",
], package = "abstract-cw-staking" }
abstract-sdk = { workspace = true, features = ["test-utils"] }
abstract-testing = { workspace = true }
wyndex-bundle = { workspace = true }
cw20 = { workspace = true, features = ["interface"] }
cw20-base = { workspace = true, features = ["interface"] }
