[package]
name = "dex"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
exclude = ["contract.wasm", "hash.txt"]
resolver = "2"


[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "deploy"
required-features = ["boot"]

[features]
default = ["export", "juno"]
# Use endpoint "export" feature instead of "library" feature because features are required to be additive.
# https://doc.rust-lang.org/cargo/reference/features.html?highlight=additive#feature-unification
export = []
boot = ["dep:abstract-boot","dep:boot-core"]

# feature flag that fixes the astroport liquidity msg for testing
testing = ["terra"]

juno = ["dep:wasmswap", "dep:cw20_junoswap", "dep:wyndex"]
terra = ["dep:terraswap", "dep:astroport", "dep:cw20_junoswap"]
osmosis = ["dep:osmosis-std"]
all = ["terra", "juno", "osmosis"]

# Keep as is until TendermintStake updates.
[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
abstract-os = { workspace = true }
abstract-sdk = { workspace = true }
abstract-api = { workspace = true }
cw-asset = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = {workspace = true}
abstract-boot = { workspace = true , optional = true }
boot-core = { workspace = true , optional = true }

# Juno dexes
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.2.0", features = [
  "library",
], optional = true }
# terraswap_juno = {package = "terraswap", version = "2.8.0", optional = true}

# Terra dexes
terraswap = { version = "2.8.0", optional = true }
cw20 = { workspace = true }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", optional = true }

wyndex = {git = "https://github.com/cosmorama/wynddex.git", optional = true}

# Osmosis
osmosis-std = { version = "0.13.2", optional = true }

[dev-dependencies]
abstract-boot = { workspace = true, features = ["daemon"] }
tokio = { workspace = true }
semver = { workspace = true }
anyhow = { workspace = true }
speculoos = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { workspace = true}
wyndex-bundle = { git = "https://github.com/Abstract-OS/integration-bundles.git"}
abstract-testing = { workspace = true }
abstract-sdk = { workspace = true, features = ["test-utils"] }
dex = {path = ".", features = ["boot"]}
