[package]
name = "abstract-dex-adapter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
exclude = ["contract.wasm", "hash.txt"]
resolver = "2"


[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "deploy"
required-features = ["interface"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
interface = ["dep:abstract-interface", "dep:cw-orch"]
juno = [
  "dep:wasmswap",
  "dep:cw20_junoswap",
  "dep:abstract-wyndex-dex-adapter",
  "dep:abstract-osmosis-dex-adapter",
]
terra = [
  "dep:terraswap",
  "dep:abstract-astroport-dex-adapter",
  "dep:cw20_junoswap",
]
osmosis = ["dep:abstract-osmosis-dex-adapter"]
schema = ["abstract-adapter/schema"]
# Keep as is until TendermintStake updates.
[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }

abstract-interface = { workspace = true, optional = true }
abstract-core = { workspace = true }
abstract-sdk = { workspace = true }
abstract-adapter = { workspace = true }
cw-orch = { workspace = true, optional = true }

# Local
abstract-adapter-utils = { workspace = true }
abstract-dex-adapter-traits = { workspace = true }

# Juno dexes #
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.2.0", features = [
  "library",
], optional = true }
abstract-wyndex-dex-adapter = { git = "https://github.com/Kayanski/abstract-wynddex.git", optional = true }
abstract-astroport-dex-adapter = { git = "https://github.com/Kayanski/abstract-astroport-core.git", optional = true }
abstract-osmosis-dex-adapter = { git = "https://github.com/Kayanski/abstract-osmosis-rust.git", optional = true }

# Terra dexes #
terraswap = { version = "2.8.0", optional = true }

[dev-dependencies]
abstract-interface = { workspace = true, features = ["daemon"] }
tokio = { workspace = true }
semver = { workspace = true }
anyhow = { workspace = true }
speculoos = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { workspace = true }
wyndex-bundle = { workspace = true }
abstract-testing = { workspace = true }
abstract-sdk = { workspace = true, features = ["test-utils"] }
dex = { path = ".", features = [
  "interface",
  "juno",
], package = "abstract-dex-adapter" }
