[package]
name = "etf"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
backtraces = ["cosmwasm-std/backtraces"]
boot = ["dep:abstract-boot","dep:boot-core"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = {workspace = true}
cw-storage-plus = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
thiserror = {workspace = true}
schemars = { workspace = true}
protobuf = {workspace = true}
cw-asset= {workspace = true}

abstract-os = {workspace = true}
abstract-app = {workspace = true}
abstract-sdk = {workspace = true}
boot-core = { workspace = true , optional = true }

abstract-boot = { workspace = true , optional = true }

[dev-dependencies]
cw20 = {workspace = true}
