[package]
name = "abstract-etf"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
boot = ["export","dep:abstract-boot","dep:boot-core"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = {workspace = true}
cw-storage-plus = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
thiserror = {workspace = true}
schemars = { workspace = true}
protobuf = {workspace = true}
cw-asset= {workspace = true}

abstract-core = {workspace = true}
abstract-app = {workspace = true}
abstract-sdk = {workspace = true}
boot-core = { workspace = true , optional = true }

abstract-boot = { workspace = true , optional = true }

[dev-dependencies]
cw20 = {workspace = true}
abstract-etf = { path = ".", features = ["boot"] }
wyndex-bundle = { git = "https://github.com/Abstract-OS/integration-bundles.git", branch = "main" }
dex = { git = "https://github.com/Abstract-OS/apis.git", features = ["juno", "boot"] }
cw-staking = { git = "https://github.com/Abstract-OS/apis.git", features = ["juno", "boot"] }
abstract-boot = { workspace = true, features = ["daemon"] }
abstract-testing = { workspace = true }
boot-cw-plus = { workspace = true }
semver = {workspace = true}
anyhow = {workspace = true}
speculoos = {workspace = true}
