[package]
name = "wyndex-factory"
version = { workspace = true }
authors = ["Cosmorama <cosmorama@proton.me>"]
edition = { workspace = true }
description = "Wyndex factory contract - pair contract generator"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
wyndex = { workspace = true }
wyndex-stake = { workspace = true, features = ["library"] }
cw-placeholder = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
wyndex-pair = { workspace = true }
