[package]
name = "lp-converter"
description = "Wyndex LP token converter - mechanism, which takes bonded token from one staking contract and allows them to be moved to another staking contract"
version = { workspace = true }
authors = ["Cosmorama <cosmorama@proton.me>"]
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
wyndex = { workspace = true }
wynd-lsd-hub = { workspace = true }
cw20 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
wyndex-factory = { workspace = true }
wyndex-pair = { workspace = true }
wyndex-stake = { workspace = true }
wynd-lsd-hub = { workspace = true }
