[package]
name = "cw-splitter"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
version = { workspace = true }
edition = { workspace = true }
description = "Contract that splits balance between payees according to configuration"
license = { workspace = true }
repository = { workspace = true }
homepage = "https://www.wynddao.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
